# sdn-intent-framework

./: .env.example  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
config/: README.md  default.toml
config/experiments/: b0.toml  e1_a.toml  e1_b.toml  e1_c.toml  e1_d.toml  e1_sfc_reroute_a.toml  e1_sfc_reroute_b.toml  e1_sfc_reroute_c.toml  e1_sfc_reroute_d.toml  e3.toml  proposed.toml
experiments/: 0_Project_Overview.md  1_setup.md  2_basic_sdn_test.md
experiments/e1/: DATASET_CARD.md  DATASET_CARD_SFC_REROUTE.md  README.md  build_dataset.py  build_sfc_reroute_dataset.py  run_experiment.py  score.py
experiments/e2/: build_dataset.py  build_sfc_reroute_dataset.py  run_validation.py  score.py
experiments/e3/: DATASET_CARD.md  build_dataset.py  diagnose_fwd002.py  run_twin_fidelity.py  score.py
experiments/gold/: build_candidates.py  build_gold.py  (+1 more)
logs/: README.md
safe_intent_sdn/: __init__.py  compiler.py  config.py  e1_evaluation.py  e2_evaluation.py  e3_evaluation.py  intent_ir.py  onos.py  run_context.py  schema.py  validator.py
schemas/: README.md  event_record.schema.json  intent_prediction.schema.json  onos_flow_set.schema.json  run_manifest.schema.json
scripts/: README.md  e3_run_all.sh  e3_twin_smoke.sh  onos.sh  smoke_test.sh  start_mn_single3.sh  start_onos.sh
tests/: test_compiler.py  test_config_and_logging.py  test_e1_evaluation.py  test_e1_sfc_reroute_dataset.py  test_e2_evaluation.py  test_e2_sfc_reroute_dataset.py  test_e3_dataset.py  test_e3_evaluation.py  test_gold_dataset.py  test_validator.py
(+56 files in other folders)
