[project]
name = "safe-intent-sdn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
]

[dependency-groups]
dev = ["pytest>=8.4,<9"]
plots = [
    "matplotlib>=3.11.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
